# swagger.yaml
@@ -106,6 +106,11 @@ paths:
           type: string
           required: false
           description: Name of the group whose messages you want. If the caller is neither an admin nor a member of the group the response will be 401 Unauthorized.
+        - in: query
+          name: since
+          type: number
+          required: true
+          description: Unix timestamp (ms since the epoch). Messages created since this time will be returned. Use 0 to get all messages.
       responses:
         '200':
           description: Expected response
